2003-06-14  Ethan Merritt <merritt@u.washington.edu>

	* term/epslatex.trm: Clean up file name handling; now it is OK to give
	either .eps or .tex in 'set output', or no file extension at all.

2003-06-13  Shigeharu TAKENO  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc, term/epslatex.trm: Fix misprints in gnuplot manual.

2003-06-11  Ethan Merritt <merritt@u.washington.edu>

	* term/epslatex.trm term/pslatex.trm: Add text rotation.

	* term/epslatex.trm: Add missing PostScript macros used by 
	t->filled_polygon.

	* src/term.c: Fix size of test polygon relative to plot.

2003-06-09  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* INSTALL, configure.in: Add note about GNU readline bug.
	
	* docs/Makefile.in, src/makefile.all, src/term.h, term/aquaterm.trm:
	Add support for AquaTerm, a new MacOS X graphics terminal.

	* src/Makefile.am: Fix for bug #738816 "configure --without-x not
	effective".

	* src/readline.c: Remove gnuplot SIGWINCH handler, see note about
	GNU readline bug.

2003-06-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/show.c (show_palette_fit2rgbformulae): Take care of color models.

2003-06-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/show.c (show_palette_rgbformulae show_palette_palette
	show_palette_colornames): Fixed indentation.

2003-06-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS src/show.c docs/gnuplot.doc: New command 'show palette
	fit2rgbformulae'.

2003-05-23  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/gplt_x11.c (main) [!DEBUG]: Redirect stderr to /dev/null on
 	entry to -persist mode event loop.  Avoids hanging emacs if you
 	run "gnuplot -persist" via shell-command.  In DEBUG mode, leave it
 	alone.

2003-05-19  Ethan Merritt <merritt@u.washington.edu>

	* term/svg.trm: Make pattern fill sequence consistent with other
 	terminal types. Fix off-by-one y coordinate error in box fill
 	code.

2003-05-19  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
